# custos

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  firebase.json  next.config.js  package-lock.json  package.json  pyproject.toml
.firebase/: hosting.b3V0.cache
.next/: prerender-manifest.json  trace
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  chrome-devtools-workspace-uuid
.next/cache/eslint/: .cache_1vmqjp5
.next/cache/webpack/client-development/: index.pack.gz.old
.next/cache/webpack/client-production/: 1.pack  10.pack  11.pack  12.pack  2.pack  3.pack  4.pack  6.pack  7.pack  8.pack  9.pack
.next/cache/webpack/edge-server-production/: index.pack  index.pack.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/cache/webpack/server-production/: 2.pack
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/app/favicon.ico/: route.js
.next/server/vendor-chunks/: @swc.js  flag-icons.js  framer-motion.js  motion-dom.js  motion-utils.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/css/app/: layout.css
.next/types/: routes.d.ts  validator.ts
.next/types/app/: layout.ts  page.ts
front_end/: .firebaserc
front_end/src/app/: page.tsx
front_end/src/app/dashboard/: page.tsx
front_end/src/app/loading/: page.tsx
front_end/src/app/results/: page.tsx
front_end/src/components/: KeywordMarquee.tsx  MapClient.tsx
front_end/src/components/loading/: VendorCard.tsx  WordCloud.tsx
front_end/src/components/results/: ResultsMap.tsx  VendorReportDialog.tsx
front_end/src/core/: di.ts  provider.ts
front_end/src/lib/: aoiFilter.ts  categories.ts  leaflet.ts  palette.ts  provider.tsx  results.ts  scoring.ts  tiles.ts  types.ts
front_end/src/providers/: api.ts  mock.ts
scrim_bot/: api.py  app.py  kloak_util.py  prompts.py  schemas.py  tui.py
scrim_bot/agents/: __init__.py  assistant_agent.py  director_agent.py  gsearch_agent.py  heavy_research_agent.py  research_agent.py  synthesis_agent.py
scrim_bot/babel/: api_base.py  babel_agent.py  babel_tools.py
scrim_bot/tools/: accuris_parts_api.py  compile_typst.py  sec_gov_api.py
scrim_bot/utils/: enums.py  firestore_util.py  logger_patch.py  singleton.py
scrim_bot/vendor_discovery/: company_detail_agent.py  vendor_discovery_agent.py
scripts/: test_script.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/loading/: page.tsx
src/app/map/: page.tsx
src/app/results/: page.tsx
src/components/: FlagBadge.tsx  MapClient.tsx
src/components/chat/: ChatWidget.tsx
src/components/dashboard/: Donut.tsx
src/components/home/: CategoryToolbar.tsx  PrescreenDialog.tsx
src/components/loading/: RadialHeatmap.tsx  StreamingFeed.tsx  VendorCard.tsx  VettingHeroCard.tsx
src/components/results/: ResultsMap.tsx
src/core/: ids.ts  scoring.ts  types.ts
src/lib/: aoi.ts  categories.ts  flags.ts  leaflet.ts  palette.ts  provider.tsx  results.ts  stream.ts
src/state/: selection.ts
